--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "pr09",
+  "name": "ai-resume-builder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/PremChand34555/AI-Resume-Builder",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
-    "@types/html2canvas": "^0.5.35"
+    "@types/html2canvas": "^0.5.35",
+    "gh-pages": "^6.3.0"
   }
 }
